--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,12 @@
 {
   "name": "api",
+  "private": true,
   "version": "1.0.50",
   "type": "module",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
     "build": "bun build src/index.ts --target=bun --outdir dist",
+    "preview": "bun ./dist/index.js",
     "lint": "eslint ."
   },
   "dependencies": {
